--- a/app/views/leaves/show.html.erb
+++ b/app/views/leaves/show.html.erb
@@ -25,7 +25,7 @@
 <p>
   <div class ="text-center">
     <strong>Calculated days of leave</strong>
-    <%= @leave.leave_to - @leave.leave_from %><br/><br/><br/>
+    <h2><%= (@leave.leave_to - @leave.leave_from).to_i %></h2><br/><br/><br/>
       <%if current_user %>
 
         <%= form_for @leave, url: {action: "approve"} do  |leave|%>
