--- a/app/views/salaries/index.html.erb
+++ b/app/views/salaries/index.html.erb
@@ -1,7 +1,17 @@
 <% if current_user %>
 
- <div class= "text-center">
+<div class="row">
+  <div class="col-lg-10">
+    <div class="row">
+      <div class="col-lg-10" id="example_filter">
+        <div class="row search-row">
+          <div class="col-md-6 pull-left">
  <%= link_to 'New Salary', new_salary_path, { :class => 'btn btn-success' } %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 <div class ="col-md-10">
 	<table class="display table table-bordered table-striped">
