change in fa icons

--- a/app/views/layouts/_employee_menu.html.erb
+++ b/app/views/layouts/_employee_menu.html.erb
@@ -1,4 +1,4 @@
-<%= current_employee.email %><br/>
+<%= current_employee.email %><br/><br/>
 
 <li class="sub-menu menu-item-leaves">
   <%= link_to leaves_path do %>
@@ -16,7 +16,7 @@
 
 <li class="sub-menu menu-item-holidays">
   <%= link_to holidays_path do %>
-    <i class="fa fa-calendar"></i>
+    <i class="fa fa-certificate"></i>
     <span>Holiday</span>
   <% end %>
 </li>
