--- a/app/views/layouts/_employee_menu.html.erb
+++ b/app/views/layouts/_employee_menu.html.erb
@@ -1,18 +1,18 @@
-<%= current_employee.email %><br/><br/>
+<%= current_employee.email %>
 
 <li class="sub-menu menu-item-leaves">
   <%= link_to leaves_path do %>
     <i class="fa fa-calendar"></i>
     <span>Leave</span>
   <% end %>
-</li><br/>
+</li>
 
 <li class="sub-menu menu-item-leaves">
   <%= link_to items_index_path do %>
     <i class="fa fa-calendar"></i>
     <span>Item</span>
   <% end %>
-</li><br/>
+</li>
 
 <li class="sub-menu menu-item-holidays">
   <%= link_to holidays_path do %>
