--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,11 +51,11 @@
 </header>
 <aside><br/><br/><br/>
 <div id ="aside_bar">
-  <ul> <li>
+  <ul class="sidebar-menu"><li>
     <a href="/">
       <i class="fa fa-dashboard"></i>
       <span>Dashboard</span>
-    </a></li><br/>
+    </a></li>
     <% if current_user %>
     	<%= render 'layouts/admin_menu' %>
     <% elsif current_employee %>
