changes in style sheet

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -26,10 +26,9 @@ ul.sidebar-menu li a.active, ul.sidebar-menu li a:hover, ul.sidebar-menu li a:fo
     transition: all 0.3s ease;
 }
 
-
 #aside_bar {
   width: 13%;height: 100%; display: block;
-  padding: 15px 0 15px 10px; position: fixed;background: #2a3542;
+  padding: 0 0 15px 10px; position: fixed;background: #2a3542;
 }
 h1,
 h2,
