--- a/app/views/leaves/_list.html.erb
+++ b/app/views/leaves/_list.html.erb
@@ -2,11 +2,9 @@
 	<table class="display table table-bordered table-striped">
 		<thead>
 			<tr>
-			<% if current_user%>
+				<% if current_user%>
 				<th>Employee Name</th>
-			<%elsif current_employee %>
-				<th>Leave Added </th>
-			<%end%>
+				<%end%>
 				<th>Leave From</th>
 				<th>Leave To</th>
 				<th>Description</th>
@@ -21,23 +19,9 @@
 		<tbody>
 			<% @leaves.each do |leave| %>
 			<tr>
-				<% if current_user %><td>	
-					<%= leave.employee.name %>
-					<div id = "admin_tag">
-						<% if leave.employee_id == nil%>
-							<%= "Admin"%>
-						<% end%>
-					</div>
-				</td>
-				<%else%>
-				<td>
-				<div id = "holiday_tag">
-						<% if leave.employee_id == nil%>
-							<%= "Holiday"%>
-						<% end%>
-					</div>
-				</td>
-				<% end %>
+				<% if current_user %>
+				<td><%= leave.employee.name %></td>
+				<% end%>
 				<td><%= leave.leave_from %></td>
 				<td><%= leave.leave_to %></td>
 				<td><%= leave.task %></td>
@@ -68,11 +52,7 @@
 				<% end %></td>
 			<%end%>
 		</td>
-	
-</tr>
-			<% end %>
+</tr><% end %>
 		</tbody>
-
 	</table>
-	<%#=  @leaves %>
 </div>
