--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -28,7 +28,8 @@
               </td>
             </tr>
           </tbody> 
-        </table><br/><br/><br/>        
+        </table>
+        <%= f.input :avatar, as: :file %><br/><br/><br/>        
         <div class="text-center invoice-btn">
           <%= f.submit 'Apply', :class => 'btn btn-success btn-lg' %>
         </div>
