--- a/app/views/salaries/show.html.erb
+++ b/app/views/salaries/show.html.erb
@@ -1,30 +1,28 @@
-<div class="panel panel-primary">
-  <div class="panel-body">
-    <div class="row invoice-list">
-      <div class="col-lg-4 col-sm-4">
-        <p>
-          <strong>Month</strong>
-          <%= @salary.month %>
-        </p>
-      </div>
-      <div class="col-lg-4 col-sm-4">
-        <p>
-          <strong>Year</strong>
-           <%= @salary.year %>
-        </p>
-      </div>
-      <div class="col-lg-4 col-sm-4">
-        <p>
-          <strong>Working Days</strong>
-          <%= @salary.working_days %>
-        </p>
-      </div>
-      <div class="col-lg-4 col-sm-4">
-        <p>
-          <strong>Total</strong>
-          <%= @salary.total %>
-        </p>
-      </div>
-    </div>
-  </div>
+<div class ="col-md-10">
+  <table class="display table table-bordered table-striped">
+    <thead>
+      <tr>
+        <th>Salary Id</th>
+        <th>Salary Month</th>
+        <th>Employee Name </th>
+        <th>Efective Salary</th>
+      </tr>
+    </thead> 
+    <tbody><% final_amount = 0%>
+      <% @items.each do |item| %>
+      <tr>
+      <% if current_user%>
+        <% if item.salary_id == @salary.id %>
+          <td><%= item.salary_id %></td>
+          <td><%= item.salary_month %></td>
+          <td><%= item.employee_name %></td>
+          <td><%= item.amount.round(2) %></td>
+           <% final_amount = final_amount + item.amount.round(2)%>
+        <%end%>     
+      <%end%> 
+      </tr>
+      <% end %>
+      <h3>Payable Amount: <%= final_amount %></h3>
+    </tbody>
+  </table>
 </div>
