--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -15,17 +15,17 @@
 			<%if current_employee%>
 			<% if item.employee_id == current_employee.id %>
 				<td><%= item.salary_id %></td>
-				<td><%= item.salary_month %></td>
+				<td><%#= item.salary.month %></td>
 				<td><%= item.employee_id %></td>
-				<td><%= item.employee_name %></td>
-				<td><%= item.amount.round(2) %></td>
+				<td><%= item.employee.name %></td>
+				<td><%= item.amount %></td>
 			<%end%>	
 			<%end%>
 			<% if current_user%>
 			<td><%= item.salary_id %></td>
-				<td><%= item.salary_month %></td>
+				<td><%#= item.salary.month %></td>
 				<td><%= item.employee_id %></td>
-				<td><%= item.employee_name %></td>
+				<td><%= item.employee.name %></td>
 				<td><%= item.amount.round(2) %></td>
 			<%end%>	
 			</tr>
