--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -19,6 +19,7 @@
 				<th>Name</th>
 				<th>Email</th>
 				<th>Salary</th>
+
 			</tr>
 		</thead> 
 		<tbody>
@@ -28,7 +29,8 @@
 				<td><%= employee.name %></td>
 				<td><%= employee.email %></td>
 				<td><%= employee.salary %></td>
-
+				<td><%= link_to edit_employee_path(employee), :class => "btn btn-info btn-xs" do %><i class="fa fa-pencil"></i> Edit
+						<% end %><td>
 <%# approved_leaves=0 %>
 <%# @leaves.each do |leave| %>
 <%# if leave.status == "Approve" %>
