--- a/app/views/layouts/_employee_menu.html.erb
+++ b/app/views/layouts/_employee_menu.html.erb
@@ -8,7 +8,7 @@
 <li class="sub-menu menu-item-leaves">
   <%= link_to items_index_path do %>
     <i class="fa fa-calendar"></i>
-    <span>Item</span>
+    <span>Salary Details</span>
   <% end %>
 </li>
 
@@ -16,5 +16,12 @@
   <%= link_to holidays_path do %>
     <i class="fa fa-certificate"></i>
     <span>Holiday</span>
+  <% end %>
+</li>
+
+<li class="sub-menu menu-item-employee">
+  <%= link_to edit_employee_registration_path do %>
+    <i class="fa fa-certificate"></i>
+    <span>Password</span>
   <% end %>
 </li>
