--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,44 @@
 <h2>Change your password</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+  <%#= devise_error_messages! %>
+  <%#= f.hidden_field :reset_password_token %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+  <section>
+  <div class= "col-md-10">
+    <div class="panel panel-primary">
+      <div class="panel-body">        
+        <table class="table table-striped table-hover">
+          <thead>
+            <tr>
+              <th>Password</th>
+              <th>Confirmation Password</th>
+              <th>Current Password</th>
+            </tr>
+          </thead>
+          <tbody id="tbody">
+            <tr>
+              <td>
+                <%= f.password_field :password, :class => 'form-control', :placeholder => 'New Password', autocomplete: "off"%>       
+              </td>
+              <td>
+                <%= f.password_field :password_confirmation, :class => 'form-control', :placeholder => 'Confirm New Password', autocomplete: "off"%>       
+              </td>
+              <td>
+                <%= f.password_field :current_password, :class => 'form-control', :placeholder => 'Current Password', autocomplete: "off"%>       
+              </td>
+              
+            </tr>
+          </tbody> 
+        </table>
+        <%= f.input :avatar, as: :file %><br/><br/><br/>        
+        <div class="text-center invoice-btn">
+          <%= f.submit 'Apply', :class => 'btn btn-success btn-lg' %>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
+</section>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<%#= render "devise/shared/links" %>
